<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.ds365.erp.wms.pda.common.headtitlebar.SubHeadTitleBar
        android:id="@+id/editPassword_headview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editPassword_oldPassword_value"
        style="@style/password_editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/old_password"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/editPassword_newPassword_value"
        style="@style/password_editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/editPassword_confirmNewPassword_value"
        style="@style/password_editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/makesure_new_password"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/editPassword_confirm_button"
        style="@style/loginButtonStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/makesure" />

</LinearLayout>