<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.ds365.erp.wms.pda.common.headtitlebar.SubHeadTitleBar
        android:id="@+id/allotOrderDetailInfo_headerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_skuCode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sku_code" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_skuCode_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/allotOrderDetailInfo_skuCode_label"
            android:textColor="@color/textColor_value" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_skuName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sku_name" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_skuName_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/allotOrderDetailInfo_skuName_label"
            android:textColor="@color/textColor_value" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_unitName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_name" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_unitName_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/allotOrderDetailInfo_unitName_label"
            android:textColor="@color/textColor_value" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_minUnitName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/min_unit_name" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_minUnitName_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/allotOrderDetailInfo_minUnitName_label"
            android:textColor="@color/textColor_value" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_storeName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/store_name" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_storeName_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/allotOrderDetailInfo_storeName_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_shelfName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/shelf_code" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_shelfName_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/allotOrderDetailInfo_shelfName_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_sysBatchNo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/sys_batch_no" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_sysBatchNo_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/allotOrderDetailInfo_sysBatchNo_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_produceDate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/produce_date" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_produceDate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/allotOrderDetailInfo_produceDate_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_produceBatchNo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/produce_batch_no" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_produceBatchNo_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/allotOrderDetailInfo_produceBatchNo_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_unitQty_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/received_unitqty" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_unitQty_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/allotOrderDetailInfo_unitQty_label"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/allotOrderDetailInfo_minUnitQty_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/received_min_unitqty" />

        <TextView
            android:id="@+id/allotOrderDetailInfo_minUnitQty_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/allotOrderDetailInfo_minUnitQty_label"
            android:inputType="number" />
    </RelativeLayout>

</LinearLayout>